docs: fixes overlapped header

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,6 @@
+body {
+  margin-top: 60px;
+}
 .rmdimportant {
   padding: 1em 1em 1em 4em;
   margin-bottom: 10px;
